--- a/twitter_mock/authentication/auth_templates/login.html
+++ b/twitter_mock/authentication/auth_templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="content-section">
-        <form method="POST" action="">
+        <form method="POST" >
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Log In</legend>
@@ -33,12 +33,10 @@
                     {% endif %}
                 </div>
                 <div class="form-check">
-                    {{ form.remember(class="form-check-input") }}
-                    {{ form.remember.label(class="form-check-label") }}
                 </div>
             </fieldset>
             <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
+                {{ form.submit_button(class="btn btn-outline-info") }}
             </div>
         </form>
     </div>
