--- a/twitter_mock/site/site_templates/createtweet.html
+++ b/twitter_mock/site/site_templates/createtweet.html
@@ -2,14 +2,14 @@
 
 {% block content %}
 <h1>Tweet!</h1>
-<form action="" method="POST">
-    <!-- {{ form.hidden_tag() }}
+<form  method="POST">
+    {{ form.hidden_tag() }}
     <div class="form-group">
         <fieldset>
-            {{ form.content.label }}
-            {{ form.content(class="form-control", placeholder="Whats on your mind")}}
+            {{ form.tweet.label }}
+            {{ form.tweet(class="form-control", placeholder="Whats on your mind")}}
         </fieldset>
-        {{ form.submit(class="btn btn-success") }}
-    </div> -->
+        {{ form.submit_button(class="btn btn-success") }}
+    </div>
 </form>
 {% endblock content %}
