--- a/twitter_mock/site/site_templates/index.html
+++ b/twitter_mock/site/site_templates/index.html
@@ -24,4 +24,20 @@
     </div>
     <h1 class="header-text">Welcome to Tweeter</h1>
 </header>
+
+{% if current_user.is_authenticated %} 
+    <div class="container">
+    {% for tweet in tweets %}
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">{{ tweet.content }}</h5>
+              <h6 class="card-subtitle mb-2 text-muted">By: {{ tweet.author.username }}</h6>
+            </div>
+        </div>
+    {% endfor %}
+    </div>
+    {% else %}
+    <h2>Log in to see/make posts!</h2>
+
+{% endif %}
 {% endblock %}
