db rebuilt  for local testing

--- a/twitter_mock/site/site_templates/explore.html
+++ b/twitter_mock/site/site_templates/explore.html
@@ -15,7 +15,7 @@
     {% endfor %}
     </div>
     {% else %}
-    <h2>Log in to see/make posts!</h2>
+    <h2>Log in to join the discourse!</h2>
 
 {% endif %}
 {% endblock content %}
