--- a/twitter_mock/site/site_templates/index.html
+++ b/twitter_mock/site/site_templates/index.html
@@ -37,7 +37,7 @@
     {% endfor %}
     </div>
     {% else %}
-    <h2>Log in to see/make posts!</h2>
+    <h2>Log in to join the discourse!</h2>
 
 {% endif %}
 {% endblock %}
