--- a/twitter_mock/authentication/auth_templates/register.html
+++ b/twitter_mock/authentication/auth_templates/register.html
@@ -5,7 +5,7 @@
         <form method="POST">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Sign Up Now!</legend>
+                <legend class="border-bottom mb-4">Sign up</legend>
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
 
