--- a/twitter_mock/site/site_templates/index.html
+++ b/twitter_mock/site/site_templates/index.html
@@ -9,10 +9,15 @@
                     {% if cat == 'user-created' %}
                         <div class="alert alert-success">
                             {{ msg }}
-                            <button type='button' class='close' data-dismiss='alert'>&times;</button>
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
                         </div>
-                    {% elif cat == 'auth-uncertain' %}
+                    {% elif cat == 'auth-success' %}
                         <div class="alert alert-success">
+                            {{ msg }}
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        </div>
+                    {% elif cat == 'auth-failed' %} 
+                        <div class="alert alert-warning">
                             {{ msg }}
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                         </div>
