--- a/twitter_mock/site/site_templates/index.html
+++ b/twitter_mock/site/site_templates/index.html
@@ -35,8 +35,9 @@
     {% for tweet in tweets %}
         <div class="card" style="width: 18rem;">
             <div class="card-body">
+              <h6 class="card-subtitle mb-2 text-muted">{{ tweet.author.username }}</h6>
               <h5 class="card-title">{{ tweet.content }}</h5>
-              <h6 class="card-subtitle mb-2 text-muted">By: {{ tweet.author.username }}</h6>
+              <h6 class="card-subtitle mb-2 text-muted">{{ tweet.date_created }}</h6>
             </div>
         </div>
     {% endfor %}
