--- a/twitter_mock/site/site_templates/createtweet.html
+++ b/twitter_mock/site/site_templates/createtweet.html
@@ -7,7 +7,7 @@
     <div class="form-group">
         <fieldset>
             {{ form.tweet.label }}
-            {{ form.tweet(class="form-control", placeholder="Whats on your mind")}}
+            {{ form.tweet(class="form-control", placeholder="What's on your mind?")}}
         </fieldset>
         {{ form.submit_button(class="btn btn-success") }}
     </div>
