--- a/twitter_mock/site/site_templates/createtweet.html
+++ b/twitter_mock/site/site_templates/createtweet.html
@@ -6,7 +6,7 @@
     {{ form.hidden_tag() }}
     <div class="form-group">
         <fieldset>
-            {{ form.tweet.label }}
+            <!-- {{ form.tweet.label }} -->
             {{ form.tweet(class="form-control", placeholder="What's on your mind?")}}
         </fieldset>
         {{ form.submit_button(class="btn btn-success") }}
